--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,15 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
+
+    maven {
+        url 'https://dl.bintray.com/senx/maven'
+    }
+
+    maven {
+        url 'https://dl.bintray.com/hbs/maven'
+    }
 }
 
 dependencies {
